Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-24535

UI elements don't accommodate bigger font sizes

XMLWordPrintable

    • Linux/X11
    • 8ef025f7326c37c2b74b33fa5979b83f816b8f23 (qt-creator/qt-creator/4.15)

      Some UI elements in qtcreator don't expand to accommodate the size of the fonts being used.

      For example the find next/previous buttons in the searchbar.

      See the attached screenshot.

        1. qt-creator-1.png
          qt-creator-1.png
          341 kB
        2. qt-creator-after.png
          qt-creator-after.png
          342 kB
        3. qt-creator-fonts.png
          qt-creator-fonts.png
          529 kB
        For Gerrit Dashboard: QTCREATORBUG-24535
        # Subject Branch Project Status CR V

            portale Alessandro Portale
            ahmad.samir Ahmad Samir
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes